@@ -1,3 +1,7 @@
+#ifdef HAVE_CONFIG_H
+# include "config.h"
+#endif /* HAVE_CONFIG_H */
+
 #if defined (_MSC_VER) || defined (__MINGW32__) || defined (__MINGW32CE__)
 
 #include <assert.h>
